# libmpd

./: ChangeLog  Makefile.am  README  autogen.sh  config.h.in  configure.ac  libmpd-0.01.pc.in  libmpd.pc.in
CVS/: Entries
doc/: Makefile.am  Makefile.in  footer.html  libmpd-adv.doxy  libmpd-docs.sgml  libmpd.doxy  libmpd.doxy.in
doc/CVS/: Entries  Repository
doc/tmpl/: debug_printf.sgml  libmpd-database.sgml  libmpd-internal.sgml  libmpd-player.sgml  libmpd-playlist.sgml  libmpd-status.sgml  libmpd-strfsong.sgml  libmpd-unused.sgml  libmpd.sgml  libmpdclient.sgml
example/: Makefile.am
example/CVS/: Entries  Repository  Root
example/artisttree/: aatree.c
example/mpdesklet/: Makefile.am  README  build.sh  egg-background-monitor.c  egg-background-monitor.h  mpdesklet.c  strfsong.c
example/mpdesklet/CVS/: Entries  Repository
example/speedtest/: example.c  playlist.c  test-mpdata.c  test.c  test.sh  test1.sh
example/testcase/: Makefile.am  Makefile.in  testcase.c
src/: Makefile.am  debug_printf.c  debug_printf.h  lib_strptime.c  libmpd-database.c  libmpd-database.h  libmpd-internal.h  libmpd-player.c  libmpd-player.h  libmpd-playlist.c  libmpd-playlist.h  libmpd-status.c  libmpd-status.h  libmpd-sticker.c  libmpd-sticker.h  libmpd-strfsong.c  libmpd-strfsong.h  libmpd-version.h  libmpd-version.h.in  libmpd.c  libmpd.h  libmpdclient.c  libmpdclient.h
src/CVS/: Entries  Repository
